# llmstxt-cli

./: README.md  main.py  pyproject.toml
cmds/: convert.py  gen.py
